--- a/Assets/Styles/teams.scss
+++ b/Assets/Styles/teams.scss
@@ -1,3 +1,5 @@
+/* Designed for use with The theme Twenty Twenty One in dark mode. !important attributes used to override conflicting theme styles. */
+
 $dark_grey_3: #333333;
 $dark_grey_4: #444444;
 $light_grey_e: #eeeeee;
